# rascal

./: .gitignore  COPYING.md  LICENSE.md  README.MD  libtcod.0.dylib  libtcod.dylib  libtcodgui.dylib  libtcodxx.dylib  makefile  meson.build  rascal  save.txt  tuto
LICENSES/: BSD-2-Clause-MAYAH.md  MIT.md
assets/: asciiTitle.txt  beings.toml  bgArt.txt  factions.toml  help.txt  items.toml  levels.toml  preferences.txt
assets/lisp/: library.lisp
include/: libtcod.hpp  libtcod_version.h
include/old/: libtcod.h
lib/: libtcodgui.0.dylib  libtcodxx.0.dylib  libtcodxx.la
macosx/: Info.plist  PkgInfo  Rascal.icns
old/: libtcodxx.dylib
src/: action.cpp  action.hpp  actor.cpp  actor.hpp  ai.cpp  ai.hpp  animation.hpp  armor.hpp  attacker.cpp  attacker.hpp  attribute.hpp  audio.cpp  audio.hpp  body.cpp  body.hpp  body_part.hpp  colors.hpp  comestible.hpp  command.cpp  command.hpp  console.cpp  console.hpp  constants.hpp  container.cpp  container.hpp  damage.hpp  destructible.cpp  destructible.hpp  dialogue_generator.hpp  dialogue_state.cpp  dialogue_state.hpp  dice.cpp  dice.hpp  direction.hpp  dummy_state.hpp  effect.cpp  effect.hpp  engine.cpp  engine.hpp  engine_command.cpp  (+78 more)
src/lisp/: builtins.cpp  builtins.hpp  lisp.cpp  lisp.hpp
tools/: grabber.sh  make_bundle.sh
